recursion.logo.lessons.recursion.logo.tree.Tree.scala.error
Tree:16: error: value length is not a member of Double
      recule((shrink.length).asInstanceOf[Double])
                     ^